CORE-1416: added the definition for the abbreviated permissions endpoint
